--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Notepro</string>
+    <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
+    <string name="add_note">Add note</string>
 </resources>
