--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="add_note">Add note</string>
     <string name="note_moved_to_trash">Note moved to trash</string>
     <string name="undo">Undo</string>
+    <string name="show_deleted">Show deleted</string>
+    <string name="settings">Settings</string>
+    <string name="search">Search</string>
 </resources>
