--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="settings">Settings</string>
     <string name="search">Search</string>
     <string name="note_title">Note title</string>
+    <string name="empty_note">Empty note</string>
 
     <!--  Preferences  -->
     <string name="enable_autodelete_key">enable_autodelete</string>
